# mcp-shield

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
crates/mcpcondor-core/: Cargo.toml
crates/mcpcondor-core/src/: auth.rs  dlp.rs  mcp.rs  types.rs  vault.rs
crates/mcpcondor-db/: Cargo.toml
crates/mcpcondor-db-sqlite/: Cargo.toml
crates/mcpcondor-db-sqlite/migrations/: 0001_oauth_clients.sql  0002_auth_codes.sql  0007_integrations.sql  0009_profiles_policy.sql  0010_audit_v2.sql
crates/mcpcondor-db-sqlite/src/: lib.rs
crates/mcpcondor-db/src/: lib.rs  store.rs  types.rs
crates/mcpcondor-policy-db/: Cargo.toml
crates/mcpcondor-policy-db/src/: lib.rs
crates/mcpcondor-standard/: Cargo.toml
crates/mcpcondor-standard/src/: admin.rs  audit.rs  config.rs  downstream.rs  handler.rs  lib.rs  main.rs  noop.rs  policy_cache.rs  server.rs  session.rs  setup.rs  ui.rs  vault.rs
crates/mcpcondor-standard/src/oauth/: authorize.rs  dcr.rs  mod.rs  token.rs
crates/mcpcondor-standard/tests/: integration_tests.rs  oauth_integration.rs  proxy_integration.rs
crates/mcpcondor-test-support/: Cargo.toml
crates/mcpcondor-test-support/src/: lib.rs
crates/mcpcondor-ui/: Cargo.toml
crates/mcpcondor-ui/src/: assets.rs  lib.rs  mock.rs  pages.rs
crates/mcpcondor-ui/templates/: agent_detail.html  agents.html  audit.html  base.html  dashboard.html  integration_tools.html  integrations.html  login.html  profile_detail.html  profiles.html
crates/mcpshield-core/: Cargo.toml
crates/mcpshield-core/src/: audit.rs  auth.rs  error.rs  lib.rs  policy.rs  types.rs  vault.rs
crates/mcpshield-db/: Cargo.toml
crates/mcpshield-db-sqlite/: Cargo.toml
crates/mcpshield-db-sqlite/migrations/: 0003_tokens.sql  0004_policy.sql  0005_setup_state.sql  0006_audit.sql  0008_vault_tokens.sql
crates/mcpshield-db-sqlite/src/: lib.rs
crates/mcpshield-db/src/: error.rs  store.rs  types.rs
crates/mcpshield-desktop/: Cargo.toml
crates/mcpshield-policy-db/: Cargo.toml
crates/mcpshield-policy-db/src/: lib.rs
crates/mcpshield-policy-sql/: Cargo.toml
crates/mcpshield-policy-sql/src/: constraints.rs  lib.rs  store.rs
crates/mcpshield-standard/: Cargo.toml
crates/mcpshield-standard/src/: admin.rs  audit.rs  config.rs  crypto.rs  downstream.rs  handler.rs  lib.rs  main.rs  noop.rs  policy_cache.rs  server.rs  session.rs  setup.rs  tls.rs  vault.rs
crates/mcpshield-standard/src/oauth/: authorize.rs  dcr.rs  metadata.rs  token.rs
crates/mcpshield-standard/tests/: integration_tests.rs  oauth_integration.rs  proxy_integration.rs
crates/mcpshield-test-support/: Cargo.toml
crates/mcpshield-test-support/src/: lib.rs
docker/: mcpcondor.toml
