[package]
name = "mcpcondor-standard"
version = "0.1.0"
edition = "2024"

[features]
default = ["tls"]
tls = ["tokio-rustls", "rustls-pemfile"]

[dependencies]
mcpcondor-core = { path = "../mcpcondor-core" }
mcpcondor-db = { path = "../mcpcondor-db" }
mcpcondor-db-sqlite = { path = "../mcpcondor-db-sqlite" }
mcpcondor-policy-db = { path = "../mcpcondor-policy-db" }
axum = { version = "0.8", features = ["form"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dashmap = "6"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.5"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
constant_time_eq = "0.3"
ring = "0.17"

[dev-dependencies]
mcpcondor-test-support = { path = "../mcpcondor-test-support" }
mcpcondor-db-sqlite = { path = "../mcpcondor-db-sqlite" }
mcpcondor-policy-db = { path = "../mcpcondor-policy-db" }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
argon2 = "0.5"

[[bin]]
name = "mcpcondor"
path = "src/main.rs"

[lib]
name = "mcpcondor_standard"
path = "src/lib.rs"
