[package]
name = "mcpshield-db"
version = "0.1.0"
edition = "2024"

[features]
sqlite = ["sqlx/sqlite", "sqlx/migrate"]
postgres = ["sqlx/postgres", "sqlx/migrate"]

[dependencies]
mcpshield-core = { path = "../mcpshield-core" }
sqlx = { version = "0.8", features = ["runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
