[package]
name = "mcpshield-policy-sql"
version = "0.1.0"
edition = "2024"

[features]
sqlite = ["mcpshield-db/sqlite"]
postgres = ["mcpshield-db/postgres"]

[dependencies]
mcpshield-core = { path = "../mcpshield-core" }
mcpshield-db = { path = "../mcpshield-db" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
regex = "1"
