[package]
name = "mcpshield-standard"
version = "0.1.0"
edition = "2024"

[dependencies]
mcpshield-core = { path = "../mcpshield-core" }
mcpshield-db = { path = "../mcpshield-db", features = ["sqlite"] }
mcpshield-policy-sql = { path = "../mcpshield-policy-sql", features = ["sqlite"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
argon2 = "0.5"
ring = "0.17"
rcgen = "0.13"
instant-acme = "0.7"
