[package]
name = "mcpshield-test-support"
version = "0.1.0"
edition = "2024"

[dependencies]
mcpshield-core = { path = "../mcpshield-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
